--- a/Project_WebDev/views/layout/navbar.ejs
+++ b/Project_WebDev/views/layout/navbar.ejs
@@ -25,7 +25,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link fs-4" href="pages/Hot_Destination.html">Destination</a>
+                <a class="nav-link fs-4" href="/Hot_Destination">Destination</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link fs-4" href="pages/Local_Cuisine.html">Cuisine</a>
