--- a/Project_WebDev/views/pages/index.ejs
+++ b/Project_WebDev/views/pages/index.ejs
@@ -36,7 +36,7 @@
                   </div>
                 </div>
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                  <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="pages/Hot_Destination.html">Go To</a></div>
+                  <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/Hot_Destination">Go To</a></div>
                 </div>
               </div>
             </div>
