--- a/Project_WebDev/views/pages/index.ejs
+++ b/Project_WebDev/views/pages/index.ejs
@@ -17,6 +17,7 @@
 
 </head>
 <body style="font-family: 'DM Sans', sans-serif;">
+  <%- include('../layouts/navbar.ejs'); %>
     <div class="card bg-dark text-white">
         <img src="/Gambar/background.jfif" height="600px" class="card-img" alt="...">
         <div class="card-img-overlay">
@@ -35,7 +36,7 @@
                   </div>
                 </div>
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                  <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/Hot_Destination">Go To</a></div>
+                  <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/destination">Go To</a></div>
                 </div>
               </div>
             </div>
@@ -81,6 +82,7 @@
           </div>
         </div>
       </section>
+      <%- include('../layouts/footer.ejs'); %>
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
