--- a/Project_WebDev/views/layouts/navbar.ejs
+++ b/Project_WebDev/views/layouts/navbar.ejs
@@ -18,14 +18,14 @@
 <body style="font-family: 'DM Sans', sans-serif;">
     <nav class="navbar navbar-expand-lg navbar-light rounded-bottom" style="background-color:#00BFFF ;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="../pages/index.ejs"><img src="/Gambar/Logo1.png" alt="" width="75px" style="background-color: rgb(255, 255, 255)" class="rounded-circle"></a>
+          <a class="navbar-brand" href="/"><img src="/Gambar/Logo1.png" alt="" width="75px" style="background-color: rgb(255, 255, 255)" class="rounded-circle"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link fs-4" href="/Hot_Destination">Destination</a>
+                <a class="nav-link fs-4" href="/destination">Destination</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link fs-4" href="pages/Local_Cuisine.html">Cuisine</a>
