--- a/Project_WebDev/views/pages/cuisine.ejs
+++ b/Project_WebDev/views/pages/cuisine.ejs
@@ -17,54 +17,14 @@
 
 </head>
 <body style="font-family: 'DM Sans', sans-serif;">
-    <div class="list-group">
-        <a href="LC/Tempoyang.html" class="list-group-item list-group-item-action mx-0 mt-5" aria-current="true">
-          <div class="row g-0">
-            <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Tempoyang.jpg" height="300px" width="450px" class="rounded-3 "></div>
-            <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
-                <h2 class="ps-2 text-md-center fw-bold">Tempoyang</h2>
-                <hr class="dropdown-divider">
-                <p class="lead mb-0 text-break ps-2">Di beberapa tempat lain di Sumatra, orang-orang menyebutnya tempoyak. Tempoyang adalah durian yang difermentasi yang memiliki rasa yang sangat asam. Ferment...</p>
-            </div>
-           </div>
-        </a>
-        <a href="LC/Gulai Taboh.html" class="list-group-item list-group-item-action mx-0 " aria-current="true">
-          <div class="row g-0">
-            <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Gulai-Taboh.jpg" height="300px" width="450px" class="rounded-3 "></div>
-            <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
-                <h2 class="ps-2 text-md-center fw-bold">Gulai Taboh</h2>
-                <hr class="dropdown-divider">
-                <p class="lead mb-0 text-break ps-2">Makanan yang satu ini berasal dari Lampung Barat. Dalam bahasa setempat, gulai taboh berarti ‘hidangan sayur yang gurih’. Makan...</p>
-            </div>
-           </div>
-        </a>
-        <a href="LC/Gabing.html" class="list-group-item list-group-item-action mx-0 " aria-current="true">
-          <div class="row g-0">
-            <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Gabing.jpg" height="300px" width="450px" class="rounded-3 "></div>
-            <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
-                <h2 class="ps-2 text-md-center fw-bold">Gabing</h2>
-                <hr class="dropdown-divider">
-                <p class="lead mb-0 text-break ps-2">Gabing merupakan makanan khas Lampung yang berkuah, tetapi, ada juga sebagian masyarakat yang...</p>
-            </div>
-           </div>
-        </a>
-        <a href="LC/Seruit.html" class="list-group-item list-group-item-action mx-0 " aria-current="true">
-          <div class="row g-0">
-            <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Seruit.jpg" height="300px" width="450px" class="rounded-3 "></div>
-            <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
-                <h2 class="ps-2 text-md-center fw-bold">Seruit</h2>
-                <hr class="dropdown-divider">
-                <p class="lead mb-0 text-break ps-2">Seruit, kuliner khas Lampung yang satu ini kurang populer dan jarang terdengar. Namun bagi masyarakat Lampung, Seruit termasuk...</p>
-            </div>
-           </div>
-        </a>
-      </div>
-  
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script>
-      feather.replace();
-    </script>
+  <%- include('../layouts/navbar.ejs'); %>
+    
+  <%- include('../layouts/footer.ejs'); %>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script>
+    feather.replace();
+  </script>
 </body>
 </html>
