--- a/Project_WebDev/views/pages/destination.ejs
+++ b/Project_WebDev/views/pages/destination.ejs
@@ -17,55 +17,56 @@
 
 </head>
 <body style="font-family: 'DM Sans', sans-serif;">
-    
-    <div class="list-group">
-        <a href="HD/Way Belerang.html" class="list-group-item list-group-item-action mx-0 mt-5" aria-current="true">
-          <div class="row g-0">
-            <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Pemandian Air Panas.jpg" height="300px" width="450px" class="rounded-3 "></div>
-            <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
-                <h2 class="ps-2 text-md-center fw-bold">Pemandian Air Panas Way Belerang</h2>
-                <hr class="dropdown-divider">
-                <p class="lead mb-0 text-break ps-2">Way Belerang merupakan sebuah tempat pemandian air panas di lereng Gunung Rajabasa, Lampung Selatan, Provinsi Lampung. Suasana alamnya sang...</p>
-            </div>
-           </div>
-        </a>
-        <a href="HD/Pulau Tegal Mas.html" class="list-group-item list-group-item-action mx-0 " aria-current="true">
-          <div class="row g-0">
-            <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Pulau Tegal Mas.jpeg" height="300px" width="450px" class="rounded-3 "></div>
-            <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
-                <h2 class="ps-2 text-md-center fw-bold">Pulau Tegal Mas</h2>
-                <hr class="dropdown-divider">
-                <p class="lead mb-0 text-break ps-2">Pulau Tegal Mas merupakan sebuah kawasan wisata yang terletak di Pulau Tegal, Kecamatan Teluk Pandan, Kabupaten Pesawaran, Lampung. Banyak yan...</p>
-            </div>
-           </div>
-        </a>
-        <a href="HD/Pulau Pahawang.html" class="list-group-item list-group-item-action mx-0 " aria-current="true">
-          <div class="row g-0">
-            <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Pulau-Pahawang-Lampung.jpg" height="300px" width="450px" class="rounded-3 "></div>
-            <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
-                <h2 class="ps-2 text-md-center fw-bold">Pulau Pahawang</h2>
-                <hr class="dropdown-divider">
-                <p class="lead mb-0 text-break ps-2">Pulau Pahawang adalah pulau yang terletak di Kecamatan Marga Punduh, Kabupaten Pesawaran, Lampung, Indonesia. Pulau ini memi...</p>
-            </div>
-           </div>
-        </a>
-        <a href="HD/Way Kambas.html" class="list-group-item list-group-item-action mx-0 " aria-current="true">
-          <div class="row g-0">
-            <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Taman Nasional Way Kambas.jpg" height="300px" width="450px" class="rounded-3 "></div>
-            <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
-                <h2 class="ps-2 text-md-center fw-bold">Taman Nasional Way Kambas</h2>
-                <hr class="dropdown-divider">
-                <p class="lead mb-0 text-break ps-2">Selain sebagai tempat konservasi untuk melindungi satwa dari pemburuan, Taman Nasional sering kali menawakan pemandangan indah yang selalu diidam-idamkan oleh wisa...</p>
-            </div>
-           </div>
-        </a>
-      </div>
+  <%- include('../layouts/navbar.ejs'); %>
+  <div class="list-group">
+    <a href="HD/Way Belerang.html" class="list-group-item list-group-item-action mx-0 mt-5" aria-current="true">
+      <div class="row g-0">
+        <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Pemandian Air Panas.jpg" height="300px" width="450px" class="rounded-3 "></div>
+        <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
+            <h2 class="ps-2 text-md-center fw-bold">Pemandian Air Panas Way Belerang</h2>
+            <hr class="dropdown-divider">
+            <p class="lead mb-0 text-break ps-2">Way Belerang merupakan sebuah tempat pemandian air panas di lereng Gunung Rajabasa, Lampung Selatan, Provinsi Lampung. Suasana alamnya sang...</p>
+        </div>
+       </div>
+    </a>
+    <a href="HD/Pulau Tegal Mas.html" class="list-group-item list-group-item-action mx-0 " aria-current="true">
+      <div class="row g-0">
+        <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Pulau Tegal Mas.jpeg" height="300px" width="450px" class="rounded-3 "></div>
+        <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
+            <h2 class="ps-2 text-md-center fw-bold">Pulau Tegal Mas</h2>
+            <hr class="dropdown-divider">
+            <p class="lead mb-0 text-break ps-2">Pulau Tegal Mas merupakan sebuah kawasan wisata yang terletak di Pulau Tegal, Kecamatan Teluk Pandan, Kabupaten Pesawaran, Lampung. Banyak yan...</p>
+        </div>
+       </div>
+    </a>
+    <a href="HD/Pulau Pahawang.html" class="list-group-item list-group-item-action mx-0 " aria-current="true">
+      <div class="row g-0">
+        <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Pulau-Pahawang-Lampung.jpg" height="300px" width="450px" class="rounded-3 "></div>
+        <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
+            <h2 class="ps-2 text-md-center fw-bold">Pulau Pahawang</h2>
+            <hr class="dropdown-divider">
+            <p class="lead mb-0 text-break ps-2">Pulau Pahawang adalah pulau yang terletak di Kecamatan Marga Punduh, Kabupaten Pesawaran, Lampung, Indonesia. Pulau ini memi...</p>
+        </div>
+       </div>
+    </a>
+    <a href="HD/Way Kambas.html" class="list-group-item list-group-item-action mx-0 " aria-current="true">
+      <div class="row g-0">
+        <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Taman Nasional Way Kambas.jpg" height="300px" width="450px" class="rounded-3 "></div>
+        <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
+            <h2 class="ps-2 text-md-center fw-bold">Taman Nasional Way Kambas</h2>
+            <hr class="dropdown-divider">
+            <p class="lead mb-0 text-break ps-2">Selain sebagai tempat konservasi untuk melindungi satwa dari pemburuan, Taman Nasional sering kali menawakan pemandangan indah yang selalu diidam-idamkan oleh wisa...</p>
+        </div>
+       </div>
+    </a>
+  </div>
   
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script>
-      feather.replace();
-    </script>
+  <%- include('../layouts/footer.ejs'); %>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script>
+    feather.replace();
+  </script>
 </body>
 </html>
