--- a/Project_WebDev/views/forum.ejs
+++ b/Project_WebDev/views/forum.ejs
@@ -1,7 +1,7 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-lg-8">
-            <% For.forEach((Forum)=>{ %>
+            <% Hal.forEach((Forum)=>{ %>
             <!-- Post content-->
             <article>
                 <!-- Post header-->
@@ -14,80 +14,40 @@
                     <a class="badge bg-secondary text-decoration-none link-light" href="#!"><%= Forum.section %></a>
                 </header>
                 <!-- Preview image figure-->
-                <figure class="mb-4"><img class="img-fluid rounded" src="" alt="..." /></figure>
+                <figure class="mb-4"><img class="img-fluid rounded" src="<%= Forum.gambar %>" alt="..." /></figure>
                 <!-- Post content-->
                 <section class="mb-5">
                     <p class="fs-5 mb-4"><%= Forum.des_pjg %></p>
                 </section>
             </article>
-            <%}); %>
             <!-- Comments section-->
             <section class="mb-5">
                 <div class="card bg-light">
                     <div class="card-body">
                         <!-- Comment form-->
-                        <form class="mb-4"><textarea class="form-control" rows="3" placeholder="Join the discussion and leave a comment!"></textarea></form>
+                        <form class="mb-4" action="/comments/comment/<%= Forum.nama %>" method="POST">
+                            <input type="user"id="user"name="user"class="form-control mb-3 rounded-pill"placeholder="Enter your username">
+                            <textarea class="form-control mb-3" rows="3" id="comment" name="comment" placeholder="Join the discussion and leave a comment!"></textarea>
+                            <button type="submit" class="btn btn-primary btn-block">
+                                Submit
+                              </button>
+                        </form>
                         <!-- Comment with nested comments-->
-                        <div class="d-flex mb-4">
+                        <% Com.forEach((Comment)=>{ %>
+                            <div class="d-flex mb-4">
                             <!-- Parent comment-->
-                            <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
+                            <div class="flex-shrink-0"><img class="rounded-circle" src="/Gambar/login_icon.png" style="width: 50px;" alt="..." /></div>
                             <div class="ms-3">
-                                <div class="fw-bold">Commenter Name</div>
-                                If you're going to lead a space frontier, it has to be government; it'll never be private enterprise. Because the space frontier is dangerous, and it's expensive, and it has unquantified risks.
-                                <!-- Child comment 1-->
-                                <div class="d-flex mt-4">
-                                    <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
-                                    <div class="ms-3">
-                                        <div class="fw-bold">Commenter Name</div>
-                                        And under those conditions, you cannot establish a capital-market evaluation of that enterprise. You can't get investors.
-                                    </div>
-                                </div>
-                                <!-- Child comment 2-->
-                                <div class="d-flex mt-4">
-                                    <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
-                                    <div class="ms-3">
-                                        <div class="fw-bold">Commenter Name</div>
-                                        When you put money directly to a problem, it makes a good headline.
-                                    </div>
-                                </div>
+                                <div class="fw-bold"><%= Comment.user %></div>
+                                <p5><%= Comment.date %></p5>
+                                <h4><%= Comment.comment %></h4>
                             </div>
-                        </div>
-                        <!-- Single comment-->
-                        <div class="d-flex">
-                            <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
-                            <div class="ms-3">
-                                <div class="fw-bold">Commenter Name</div>
-                                When I look at the universe and all the ways the universe wants to kill us, I find it hard to reconcile that with statements of beneficence.
                             </div>
-                        </div>
+                        <%}); %>
                     </div>
                 </div>
             </section>
-        </div>
-        <!-- Side widgets-->
-        <div class="col-lg-4">
-            <!-- Categories widget-->
-            <div class="card mb-4">
-                <div class="card-header">Categories</div>
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <ul class="list-unstyled mb-0">
-                                <li><a href="#!">Web Design</a></li>
-                                <li><a href="#!">HTML</a></li>
-                                <li><a href="#!">Freebies</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-sm-6">
-                            <ul class="list-unstyled mb-0">
-                                <li><a href="#!">JavaScript</a></li>
-                                <li><a href="#!">CSS</a></li>
-                                <li><a href="#!">Tutorials</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <%}); %>
         </div>
     </div>
 </div>
