--- a/Project_WebDev/views/login.ejs
+++ b/Project_WebDev/views/login.ejs
@@ -1,37 +1,19 @@
 <div class="container-md mt-3">
   <div class="card">
     <div class="card-body">
-      <h1 class="card-title">Member Login</h1>
-
-      <h5 class="card-subtitle mb-2 text-muted">
-        Use your credentials to access this system.
-      </h5>
       <%- include ("partials/messages"); %>
-      <br />
-      <form action="/users/login" method="POST">
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input
-            type="email"
-            id="email"
-            name="email"
-            class="form-control"
-            placeholder="Enter Email"
-          />
+      <form class="container-xl" action="/users/login" method="POST">
+        <img src="/Gambar/login_icon.png" class="rounded mx-auto d-block" alt="" height="150px" style="padding-bottom: 10px;">
+        <div class="mb-3 text-center">
+          <label for="email" class="form-label ">Email address</label>
+          <input type="email" id="email" name="email" class="form-control rounded-pill" placeholder="Enter Email"/>
         </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input
-            type="password"
-            id="password"
-            name="password"
-            class="form-control"
-            placeholder="Enter Password"
-          />
+        <div class="mb-3 text-center">
+          <label for="password" class="form-label">Password</label>
+          <input type="password" id="password" name="password" class="form-control rounded-pill" placeholder="Enter Password"/>
         </div>
-        <button type="submit" class="btn btn-primary btn-block">Login</button>
+        <button type="submit" class="btn btn-outline-success rounded mx-auto d-block rounded-3">Log in</button>
       </form>
-      <p class="lead mt-4">
         No Account? <a href="/users/register">Register</a>
       </p>
     </div>
