--- a/Project_WebDev/views/pages/entertainment.ejs
+++ b/Project_WebDev/views/pages/entertainment.ejs
@@ -15,7 +15,7 @@
             </div>
           </div>
           <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/destination">Go To</a></div>
+            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/halaman/<%= Forum._id %>/<%= Forum.nama %>">Go To</a></div>
           </div>            
         </div>   
       </div>
