--- a/Project_WebDev/views/register.ejs
+++ b/Project_WebDev/views/register.ejs
@@ -5,54 +5,24 @@
         <i class="fas fa-user-plus"></i> Register
       </h1>
       <%- include ("partials/messages"); %>
-      <form action="/users/register" method="POST">
+      <form class="container-xl" action="/users/register" method="POST">
         <div class="form-group">
           <label for="name">Name</label>
-          <input
-            type="name"
-            id="name"
-            name="name"
-            class="form-control"
-            placeholder="Enter Name"
-            value="<%= typeof name != 'undefined' ? name : '' %>"
-          />
+          <input type="name" id="name" name="name" class="mb-3 form-control rounded-pill" placeholder="Enter Name" value="<%= typeof name != 'undefined' ? name : '' %>"/>
         </div>
         <div class="form-group">
           <label for="email">Email</label>
-          <input
-            type="email"
-            id="email"
-            name="email"
-            class="form-control"
-            placeholder="Enter Email"
-            value="<%= typeof email != 'undefined' ? email : '' %>"
-          />
+          <input type="email" id="email" name="email" class="mb-3 form-control rounded-pill" placeholder="Enter Email" value="<%= typeof email != 'undefined' ? email : '' %>" />
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input
-            type="password"
-            id="password"
-            name="password"
-            class="form-control"
-            placeholder="Create Password"
-            value="<%= typeof password != 'undefined' ? password : '' %>"
-          />
+          <input type="password" id="password" name="password" class="mb-3 form-control rounded-pill" placeholder="Create Password" value="<%= typeof password != 'undefined' ? password : '' %>"/>
         </div>
         <div class="form-group">
           <label for="password2">Confirm Password</label>
-          <input
-            type="password"
-            id="password2"
-            name="password2"
-            class="form-control"
-            placeholder="Confirm Password"
-            value="<%= typeof password2 != 'undefined' ? password2 : '' %>"
-          />
+          <input type="password" id="password2" name="password2" class="mb-3 form-control rounded-pill" placeholder="Confirm Password" value="<%= typeof password2 != 'undefined' ? password2 : '' %>"/>
         </div>
-        <button type="submit" class="btn btn-primary btn-block">
-          Register
-        </button>
+        <button type="submit" class="btn-outline-success rounded mx-auto d-block rounded-3"> Register </button>
       </form>
       <p class="lead mt-4">
         Sudah Punya Account? <a href="/users/login">Login</a>
