--- a/views/pages/cuisine.ejs
+++ b/views/pages/cuisine.ejs
@@ -15,11 +15,16 @@
             </div>
           </div>
           <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/halaman/<%= Forum._id %>/<%= Forum.nama %>">Go To</a></div>
+            <div class="text-center"><a class="btn btn-outline-dark mt-auto stretched-link" href="/halaman/<%= Forum._id %>/<%= Forum.nama %>">Go To</a></div>
           </div>            
         </div>   
       </div>
       <%}); %> 
+      <div class="card h-100 btn btn-outline-dark">             
+        <img class="card-img-top" src="/Gambar/Plus logo.png" alt="..." height="200px" width="450px" class="rounded-3"/>
+        <a class="stretched-link" href="/post"></a>
+        </div>            
+      </div> 
     </div>
   </div>
 </section>
