--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -19,7 +19,7 @@
           <a class="nav-link fs-4" href="/lodging">Lodging</a>
         </li> 
         </ul>
-        <% if (locals.isLoggedIn) { %>
+        <% if (locals.isLoggedIn || locals.isAdmin) { %>
           <div class="dropdown mx-2">
             <button class="btn btn-danger dropdown-toggle rounded-pill" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Selamat Datang</button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
