--- a/views/pages/lodging.ejs
+++ b/views/pages/lodging.ejs
@@ -20,6 +20,14 @@
         </div>   
       </div>
       <%}); %> 
+      <% if (locals.isAdmin) { %>
+        <div class="card h-100 btn btn-outline-dark">             
+          <img class="card-img-top" src="/Gambar/plus-icon-13074.png" alt="..." height="313px" width="450px" class="rounded-3"/>
+          <h2 class="fw-bolder pt-4"> + Post</h2>
+          <a class="stretched-link" href="/post/"></a>
+        </div>
+      <% } else { %>
+      <% } %>               
     </div>
   </div>
 </section>
