--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,4 +1,5 @@
 <form class="container-xl" action="/posting/post" method="POST">
+  <%- include ("partials/messages"); %>
       <div class="mb-3 row">
         <label class="col-sm-2 col-form-label">Section</label>
         <div  class="col-sm-10">
