--- a/views/terimakasih.ejs
+++ b/views/terimakasih.ejs
@@ -1,3 +1,3 @@
 <h1 class="mt-4">Terima Kasih</h1>
-<p class="lead mb-3">Komentar anda sudah kami simpan</p>
+<p class="lead mb-3">Data anda sudah kami simpan</p>
 <a href="/" class="btn btn-secondary">Kembali ke halaman awal</a>
